add slider and icon logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div class="header">
 
             <div class="logo">
-                <div class="logoimg"></div>
+                <div class="logoimg">
+                    <img src="https://img.icons8.com/parakeet/50/000000/crown.png"/>
+                </div>
             </div>
 
             <div class="menu">
@@ -44,6 +46,8 @@
                 <div class="slide">
                     <div class="slidearea">
                         <h1>Design is about <br><span>comunication</span></h1>
+                        <h2>Call Us: +00 0 1234 5678</h2>
+                        <a href="">Get in touch!</a>
                     </div>
                 </div>
                 <div class="slide">
@@ -57,6 +61,15 @@
                     </div>
                 </div>
             </div>
+
+            <div class="sliders-pointers">
+
+                <div class="pointer active"></div>
+                <div class="pointer"></div>
+                <div class="pointer"></div>
+
+            </div>
+
         </section>
 
     </main>
