--- a/index.html
+++ b/index.html
@@ -72,6 +72,27 @@
 
         </section>
 
+        <section class="default light">
+            
+            <div class="section-title">About us</div>
+            <div class="section-desc">who we are</div>
+            <div class="section-body">
+
+            </div>
+
+        </section>
+
+        <section class="default dark">
+            
+            <div class="section-title"></div>
+            <div class="section-desc"></div>
+            <div class="section-body">
+
+            </div>
+
+        </section>
+
+
     </main>
 
     <footer>
