add section about us

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="slidearea">
                         <h1>Design is about <br><span>comunication</span></h1>
                         <h2>Call Us: +00 0 1234 5678</h2>
-                        <a href="">Get in touch!</a>
+                        <a class="button" href="">Get in touch!</a>
                     </div>
                 </div>
                 <div class="slide">
@@ -77,6 +77,22 @@
             <div class="section-title">About us</div>
             <div class="section-desc">who we are</div>
             <div class="section-body">
+
+                <div class="section-aboutus">
+                    <div class="section-aboutus--left">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sint, magni fuga libero totam vitae ea non impedit sunt dolores velit quasi delectus tenetur blanditiis illo fugit voluptate commodi illum!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos facilis, error maiores ea hic qui quae placeat nulla fugit animi perspiciatis veritatis dolorem illum illo quis sint, sequi voluptatibus a?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id consequatur debitis cum, vero maxime placeat consectetur fugit fugiat quod exercitationem! Libero cumque enim voluptas pariatur debitis minus omnis et.
+                        </p>
+                        <br>
+                        <a class="button" href="">Learn More</a>
+                    </div>
+
+                    <div class="section-aboutus--right">
+                        <img src="./media/foto9.jpg" alt="">
+                    </div>
+                </div>
 
             </div>
 
