--- a/index.html
+++ b/index.html
@@ -100,9 +100,37 @@
 
         <section class="default dark">
             
-            <div class="section-title"></div>
-            <div class="section-desc"></div>
+            <div class="section-title">services</div>
+            <div class="section-desc">services that we provide</div>
             <div class="section-body">
+
+                <div class="section-services">
+
+                    <div class="section-service">
+                        <img src="./assets/images/medalha.png" alt="">
+                        <h4>HIGH QUALITY DESIGN</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+
+                    <div class="section-service">
+                        <img src="./assets/images/estrela.png" alt="">
+                        <h4>modern design</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+
+                    <div class="section-service">
+                        <img src="./assets/images/relogio.png" alt="">
+                        <h4>regular updates</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+
+                    <div class="section-service">
+                        <img src="./assets/images/balao.png" alt="">
+                        <h4>fast and free suport</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+
+                </div>
 
             </div>
 
