--- a/index.html
+++ b/index.html
@@ -136,6 +136,31 @@
 
         </section>
 
+        <section class="default light">
+            
+            <div class="section-title">our projects</div>
+            <div class="section-desc">what we create</div>
+            <div class="section-body">
+
+                <div class="section-projects">
+                    <div class="section-projects--filters">
+                        <ul>
+                            <li class="active">All</li>
+                            <li>Photos</li>
+                            <li>Branding</li>
+                            <li>Adverts</li>
+                            <li>Development</li>
+                            <li>Misc</li>
+                        </ul>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+        </section>
+
 
     </main>
 
