add section our team pt1

--- a/index.html
+++ b/index.html
@@ -312,6 +312,26 @@
 
         </section>
 
+        <section class="default dark bg-team">
+            
+            <div class="section-team-area">
+
+                <div class="section-title">our team</div>
+                <div class="section-desc">our co-workers</div>
+                <div class="section-body">
+
+                    <div class="section-team">
+                        ...
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
+
+
+
 
     </main>
 
