--- a/index.html
+++ b/index.html
@@ -321,7 +321,64 @@
                 <div class="section-body">
 
                     <div class="section-team">
-                        ...
+                        <!--sliders do section team-->
+                        <div class="sliders" style="margin-left: 0;">
+
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="social-team--avatar" src="./media/mulher1.png" alt="">
+                                    <div class="section-team--name">Jane doe</div>
+                                    <div class="section-team--role">Master mind</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="social-team--avatar" src="./media/mulher2.png" alt="">
+                                    <div class="section-team--name">Anna johns</div>
+                                    <div class="section-team--role">Technical lead</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="slide">
+                                <div class="slidearea">
+                                    <img class="social-team--avatar" src="./media/homem1.png" alt="">
+                                    <div class="section-team--name">Mike chiller</div>
+                                    <div class="section-team--role">Creative head</div>
+                                    <div class="section-team--social">
+                                        <a href=""><img src="assets/images/facebook.png" alt=""></a>
+                                        <a href=""><img src="assets/images/googleplus.png" alt=""></a>
+                                        <a href=""><img src="assets/images/linkedin.png" alt=""></a>
+                                        <a href=""><img src="assets/images/pinterest.png" alt=""></a>
+                                        <a href=""><img src="assets/images/twitter.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="sliders-pointers">
+
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+        
                     </div>
 
                 </div>
