add section happy clients

--- a/index.html
+++ b/index.html
@@ -387,7 +387,30 @@
 
         </section>
 
+        <section class="default light">
+            
+            <div class="section-title">Happy clients</div>
+            <div class="section-desc">clients reviews</div>
+            <div class="section-body">
 
+                <div class="section-happyclients">
+                    <div class="section-aboutus--left">
+                        <img src="/media/homem2.png" alt="">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sint, magni fuga libero totam vitae ea non impedit sunt dolores velit quasi delectus tenetur blanditiis illo fugit voluptate commodi illum!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos facilis, error maiores ea hic qui quae placeat nulla fugit animi perspiciatis veritatis dolorem illum illo quis sint, sequi voluptatibus a?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id consequatur debitis cum, vero maxime placeat consectetur fugit fugiat quod exercitationem! Libero cumque enim voluptas pariatur debitis minus omnis et.
+                        </p>
+                    </div>
+
+                    <div class="section-aboutus--right">
+                        <img src="./media/foto9.jpg" alt="">
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
 
 
     </main>
