--- a/index.html
+++ b/index.html
@@ -387,29 +387,45 @@
 
         </section>
 
-        <section class="default light">
-            
-            <div class="section-title">Happy clients</div>
-            <div class="section-desc">clients reviews</div>
+        <section class="default light testimonials">
+            <div class="section-title">Happy Clients</div>
+            <div class="section-desc">Client Reviews</div>
             <div class="section-body">
-
-                <div class="section-happyclients">
-                    <div class="section-aboutus--left">
-                        <img src="/media/homem2.png" alt="">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure sint, magni fuga libero totam vitae ea non impedit sunt dolores velit quasi delectus tenetur blanditiis illo fugit voluptate commodi illum!
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos facilis, error maiores ea hic qui quae placeat nulla fugit animi perspiciatis veritatis dolorem illum illo quis sint, sequi voluptatibus a?
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum id consequatur debitis cum, vero maxime placeat consectetur fugit fugiat quod exercitationem! Libero cumque enim voluptas pariatur debitis minus omnis et.
-                        </p>
+                <div class="section-testimonials">
+                    <div class="sliders" style="margin-left:0;">
+                        <div class="slide">
+                            <div class="slidearea">
+                                <img class="section-testimonials--avatar" src="media/homem2.png" />
+                                <div class="section-testimonials--name">John Doe</div>
+                                <div class="section-testimonials--role">Head of PR Department</div>
+                                <img class="section-testimonials--quoteimg" src="assets/images/quote.png" />
+                                <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                            </div>
+                        </div><div class="slide">
+                            <div class="slidearea">
+                                <img class="section-testimonials--avatar" src="media/homem2.png" />
+                                <div class="section-testimonials--name">John Doe</div>
+                                <div class="section-testimonials--role">Head of PR Department</div>
+                                <img class="section-testimonials--quoteimg" src="assets/images/quote.png" />
+                                <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                            </div>
+                        </div><div class="slide">
+                            <div class="slidearea">
+                                <img class="section-testimonials--avatar" src="media/homem2.png" />
+                                <div class="section-testimonials--name">John Doe</div>
+                                <div class="section-testimonials--role">Head of PR Department</div>
+                                <img class="section-testimonials--quoteimg" src="assets/images/quote.png" />
+                                <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                            </div>
+                        </div>
                     </div>
-
-                    <div class="section-aboutus--right">
-                        <img src="./media/foto9.jpg" alt="">
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
                     </div>
                 </div>
-
             </div>
-
         </section>
 
 
