--- a/index.html
+++ b/index.html
@@ -387,35 +387,35 @@
 
         </section>
 
-        <section class="default light testimonials">
+        <section class="default light clients">
             <div class="section-title">Happy Clients</div>
             <div class="section-desc">Client Reviews</div>
             <div class="section-body">
-                <div class="section-testimonials">
+                <div class="section-clients">
                     <div class="sliders" style="margin-left:0;">
                         <div class="slide">
                             <div class="slidearea">
-                                <img class="section-testimonials--avatar" src="media/homem2.png" />
-                                <div class="section-testimonials--name">John Doe</div>
-                                <div class="section-testimonials--role">Head of PR Department</div>
-                                <img class="section-testimonials--quoteimg" src="assets/images/quote.png" />
-                                <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                                <img class="section-clients--avatar" src="media/homem2.png" />
+                                <div class="section-clients--name">John Doe</div>
+                                <div class="section-clients--role">Head of PR Department</div>
+                                <img class="section-clients--quoteimg" src="assets/images/quote.png" />
+                                <div class="section-clients--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
                             </div>
                         </div><div class="slide">
                             <div class="slidearea">
-                                <img class="section-testimonials--avatar" src="media/homem2.png" />
-                                <div class="section-testimonials--name">John Doe</div>
-                                <div class="section-testimonials--role">Head of PR Department</div>
-                                <img class="section-testimonials--quoteimg" src="assets/images/quote.png" />
-                                <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                                <img class="section-clients--avatar" src="media/homem2.png" />
+                                <div class="section-clients--name">John Doe</div>
+                                <div class="section-clients--role">Head of PR Department</div>
+                                <img class="section-clients--quoteimg" src="assets/images/quote.png" />
+                                <div class="section-clients--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
                             </div>
                         </div><div class="slide">
                             <div class="slidearea">
-                                <img class="section-testimonials--avatar" src="media/homem2.png" />
-                                <div class="section-testimonials--name">John Doe</div>
-                                <div class="section-testimonials--role">Head of PR Department</div>
-                                <img class="section-testimonials--quoteimg" src="assets/images/quote.png" />
-                                <div class="section-testimonials--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
+                                <img class="section-clients--avatar" src="media/homem2.png" />
+                                <div class="section-clients--name">John Doe</div>
+                                <div class="section-clients--role">Head of PR Department</div>
+                                <img class="section-clients--quoteimg" src="assets/images/quote.png" />
+                                <div class="section-clients--quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam.</div>
                             </div>
                         </div>
                     </div>
