--- a/index.html
+++ b/index.html
@@ -503,6 +503,97 @@
             </div>
         </section>
 
+        <section class="default light premium">
+            <div class="section-title">Premium</div>
+            <div class="section-desc">Even More Features Available</div>
+            <div class="section-body">
+                <div class="section-premium">
+                    <div class="sliders" style="margin-left:0;">
+                        <div class="slide">
+                            <div class="slidearea">
+                                <div class="section-premium--left">
+                                    <img src="media/livros.png" />
+                                </div>
+                                <div class="section-premium--right">
+                                        <div class="section-premium--item">
+                                            <img src="assets/images/check.png" />
+                                            <div>
+                                                <h4>FIRST FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.<br/>
+                                                -- FEATURE ONE<br/>
+                                                -- FEATURE TWO<br/>
+                                                -- FEATURE THREE
+                                            </div>
+                                        </div>
+                                        <div class="section-premium--item">
+                                            <img src="assets/images/check.png" />
+                                            <div>
+                                                <h4>SECOND FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
+                                            </div>
+                                        </div>
+                                        <div class="section-premium--item">
+                                            <img src="assets/images/check.png" />
+                                            <div>
+                                                <h4>THIRD FEATURE</h4>
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus.
+                                            </div>
+                                        </div>
+                                </div>
+                            </div>
+                        </div><div class="slide">
+                            <div class="slidearea">
+                                ...
+                            </div>
+                        </div><div class="slide">
+                            <div class="slidearea">
+                                ...
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sliders-pointers">
+                        <div class="pointer active"></div>
+                        <div class="pointer"></div>
+                        <div class="pointer"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="default dark">
+            <div class="section-title">Some Facts</div>
+            <div class="section-desc">About our work</div>
+            <div class="section-body">
+                <div class="section-facts">
+                    <div class="section-fact">
+                        <h3>1000</h3>
+                        <div class="section-fact-line"></div>
+                        <h4>Design Projects Released</h4>
+                        <p>Donec tincidunt cursus</p>
+                    </div>
+                    <div class="section-fact">
+                        <h3>900</h3>
+                        <div class="section-fact-line"></div>
+                        <h4>Photos</h4>
+                        <p>Morbi ex felis, tincidunt sed hendrerit</p>
+                    </div>
+                    <div class="section-fact">
+                        <h3>500</h3>
+                        <div class="section-fact-line"></div>
+                        <h4>Marketing Ideas</h4>
+                        <p>Donec tincidunt cursus</p>
+                    </div>
+                    <div class="section-fact">
+                        <h3>100</h3>
+                        <div class="section-fact-line"></div>
+                        <h4>Exhibitions</h4>
+                        <p>Morbi ex felis, tincidunt sed</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    
+
 
     </main>
 
