applying responsiveness to tablet

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
             <!--inicio do menu-->
             <div class="logo">
                 <div class="logoimg">
-                    <img src="https://img.icons8.com/parakeet/50/000000/crown.png"/>
+                    <img src="https://img.icons8.com/parakeet/50/000000/crown.png" alt=""/>
                 </div>
             </div>
 
             <div class="menu">
+                <img class="menu-opener" src="/assets/images/menu.png" alt="">
                 <nav>
                     <ul>
                         <li class="active"><a href="">Home</a></li>
