add mobile version

--- a/index.html
+++ b/index.html
@@ -551,10 +551,11 @@
                                         </div>
                                 </div>
                             </div>
-                        </div><div class="slide">
+                        </div>
+                        <div class="slide">
                             <div class="slidearea">
                                 ...
-                            </div>
+                        </div>
                         </div><div class="slide">
                             <div class="slidearea">
                                 ...
